<resources>
    <string name="app_name">DicodingEventApp</string>
    <string name="recommendation_event_for_you">Recommendation event for you!</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="image">image</string>
    <string name="event">Event</string>
    <string name="owner_name">Owner Name</string>
    <string name="city_name">City Name</string>
    <string name="category">Category</string>
    <string name="quota">Quota</string>
    <string name="registrants">Registrants</string>
    <string name="description">Description</string>
    <string name="link">Link</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="media_cover">Media Cover</string>
    <string name="image_logo">Image Logo</string>
    <string name="summary">Summary</string>
    <string name="nama_event">nama event</string>
    <string name="register">register</string>
    <string name="ownername">OwnerName</string>
    <string name="begintime">BeginTime</string>
    <string name="quotaresgistrant">QuotaResgistrant</string>
    <string name="quota_resgistrant">Quota Resgistrant:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finished">Finished</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_connection">Connection problem!</string>
    <string name="refresh">Refresh</string>
    <string name="event_name">Event Name</string>
    <string name="cari_event">Search Event</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="image_event">Image Event</string>
</resources>